initial css set up

--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
     <body>
         <!-- navigation -->
         <header>
+        <div class="header-title">
             <h1>
                 Vanessa Maldonado
             </h1>
-            <ul>
-                <li>
-
+        </div>
+            <ul class="navigation">
+                <li> 
+                    <a href=#work >Work</a> 
                 </li>
-            </Ul>
+                <li>
+                    <a href=#about-me > About Me</a>
+                </li>
+                <li>
+                    <a href=#contact > Contact</a>
+                </li>
+            </ul>
         </header>
         <!-- hero section -->
-        <section>
+        <section class="hero">
 
         </section>
         <!-- footer section -->
