--- a/index.html
+++ b/index.html
@@ -29,7 +29,65 @@
         <!-- hero section -->
         <section class="hero">
 
+
         </section>
+
+        <!-- work section-->
+        <section id="work">
+        <div>
+            <h2>
+                Work
+            </h2>
+        </div>
+        <div>
+            <article>
+                <p>
+                    Work 1
+                </p>
+            </article>
+            <article>
+                <p>
+                    Work 2
+                </p>
+            </article>
+            <article>
+                <p>
+                    Work 3
+                </p>
+            </article>
+        </div>
+        </section>
+        <!-- work section ends-->
+
+        <!--about me section-->
+        <section id="about-me">
+            <h2>
+                About Me
+            </h2>
+
+        </section>
+        <!-- about me ends-->
+
+        <!-- contact section-->
+        <section id="contact">
+            <h2>
+                Contact
+            </h2>
+           <ul>
+               <li>
+                   <a href="linked in here" >My Linked In</a>
+               </li>
+               <li>
+                   <a href="git hub here" >My Git Hub</a>
+               </li>
+               <li>
+                   <a href="email here" >Email Me Here</a>
+               </li>
+           </ul>
+
+        </section>
+        <!-- contact section ends-->
+
         <!-- footer section -->
         <footer>
 
