adding css styles to content

--- a/index.html
+++ b/index.html
@@ -26,20 +26,23 @@
                 </li>
             </ul>
         </header>
+
         <!-- hero section -->
         <section class="hero">
 
 
         </section>
+        <!-- end of hero section-->
 
         <!-- work section-->
+        
         <section id="work">
         <div>
             <h2>
                 Work
             </h2>
         </div>
-        <div>
+        <div class="work-items">
             <article>
                 <p>
                     Work 1
@@ -64,6 +67,9 @@
             <h2>
                 About Me
             </h2>
+            <p>
+                text Here
+            </p>
 
         </section>
         <!-- about me ends-->
@@ -84,8 +90,8 @@
                    <a href="email here" >Email Me Here</a>
                </li>
            </ul>
-
         </section>
+        
         <!-- contact section ends-->
 
         <!-- footer section -->
