adding images and text to work section

--- a/index.html
+++ b/index.html
@@ -44,13 +44,20 @@
         <div class="work-items">
             <article>
                 <img src="images/run-buddy.png" alt="" width="100%" height="100%" >
-            </article>
-            <article>
-                <img src="" alt="" width="100%" height="100%" >
-            </article>
-            <article>
                 <p>
-                    Work 3
+                    Run Buddy: html and css project 
+                </p>
+            </article>
+            <article>
+                <img src="images/robot-gladiators.jpg" alt="" width="100%" height="100%">
+                <p>
+                    Robot Gladiators: JavaScript project
+                </p>
+            </article>
+            <article>
+                <!--ADD PLACEHOLDER IMAGE HERE <img src="" alt="" width="100%" height="100%"> -->
+                <p>
+                    Work 3: text here
                 </p>
             </article>
         </div>
@@ -88,13 +95,13 @@
             </h2>
            <ul class="contact">
                <li>
-                <i class="fa fa-chain" style="font-size:24px"></i><a href="linked in here" > My Linked In</a>
+                    <i class="fa fa-chain" style="font-size:24px"></i><a href="linked in here" > My Linked In</a>
                </li>
                <li>
-                   <a href="git hub here" >My Git Hub</a>
+                    <i class="fa fa-github-alt" style="font-size:24px"></i><a href="git hub here" > My Git Hub</a>
                </li>
                <li>
-                <i class="fa fa-envelope-o" style="font-size:24px"></i><a href="email here" > vanessa.rodriguez@mavs.uta.edu</a>
+                    <i class="fa fa-envelope-o" style="font-size:24px"></i><a href="email here" > vanessa.rodriguez@mavs.uta.edu</a>
                </li>
            </ul>
         </section>
