adding flexbox properties

--- a/index.html
+++ b/index.html
@@ -42,24 +42,30 @@
                 Work
             </h2>
         <div class="work-items">
+        <div class="flex-row">
             <article>
-                <img src="images/run-buddy.png" alt="" width="100%" height="100%" >
                 <p>
                     Run Buddy: html and css project 
                 </p>
+                <img src="images/run-buddy.png" alt="" width="400px" height="400px"  >
             </article>
+        </div>
+        <div class="flex-row">
             <article>
-                <img src="images/robot-gladiators.jpg" alt="" width="100%" height="100%">
                 <p>
                     Robot Gladiators: JavaScript project
                 </p>
+                <img src="images/robot-gladiators.jpg" alt="" width="200px" height="200px">
             </article>
+        </div>
+        <div class="flex-row">
             <article>
-                <!--ADD PLACEHOLDER IMAGE HERE <img src="" alt="" width="100%" height="100%"> -->
                 <p>
                     Work 3: text here
                 </p>
+                <!--ADD PLACEHOLDER IMAGE HERE <img src="" alt="" width="100%" height="100%"> -->
             </article>
+        </div>
         </div>
         </section>
         <!-- work section ends-->
@@ -105,8 +111,6 @@
                </li>
            </ul>
         </section>
-       
-        
         <!-- contact section ends-->
 
         <!-- footer section -->
