adding responsive design properties

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>
                     Run Buddy: html and css project 
                 </p>
-                <img src="images/run-buddy.png" alt="" width="400px" height="400px"  >
+                <img src="images/run-buddy.png" alt="" style="max-width: 100%; height: auto;"  >
             </article>
         </div>
         <div class="flex-row">
@@ -55,7 +55,7 @@
                 <p>
                     Robot Gladiators: JavaScript project
                 </p>
-                <img src="images/robot-gladiators.jpg" alt="" width="200px" height="200px">
+                <img src="images/robot-gladiators.jpg" alt="" style="max-width: 75%; height: auto;">
             </article>
         </div>
         <div class="flex-row">
@@ -71,24 +71,21 @@
         <!-- work section ends-->
 
         <!--about me section-->
-        <div class="about">
+        <div>
         <section id="about">
             <h2>
                 About 
             </h2>
-           <div class="about-me">
-            <p>
+           <div class="about-flex">
+            <p class="about-text">
                 Hi! My name is Vanessa, a Mexican-American Front End Web Developer in training. 
-                <br/>
                 I graduated with a Public Health degreen in May 2020 and currently in the process of a career change.  
-                <br/>
                 My friends and colleages would describe me as empathetic, passionate, and creative. 
-                <br/>
                 I want to help users have an intuitive experience with through creative and seamless designs. 
             </p>
             </div>
-            <div class="about-me-img">
-            <img  src="images/headshot.jpg" alt="" width="25%" height="25%">
+            <div class="about-me-img" class="about-flex">
+            <img  src="images/headshot.jpg" alt="headshot of Vanessa Maldonado" style="max-width:100%; height:auto;">
             </div>
         </section>
         </div>
@@ -100,13 +97,13 @@
                 Let's Connect 
             </h2>
            <ul class="contact">
-               <li>
-                    <i class="fa fa-chain" style="font-size:24px"></i><a href="linked in here" > My Linked In</a>
+               <li class="contact-info">
+                    <i class="fa fa-chain" style="font-size:24px"></i><a href="linked in here" > Linked In</a>
                </li>
-               <li>
-                    <i class="fa fa-github-alt" style="font-size:24px"></i><a href="git hub here" > My Git Hub</a>
+               <li class="contact-info">
+                    <i class="fa fa-github-alt" style="font-size:24px"></i><a href="git hub here" > Git Hub</a>
                </li>
-               <li>
+               <li class="contact-info"> 
                     <i class="fa fa-envelope-o" style="font-size:24px"></i><a href="email here" > vanessa.rodriguez@mavs.uta.edu</a>
                </li>
            </ul>
