adding images, cleaning up html

--- a/index.html
+++ b/index.html
@@ -42,28 +42,52 @@
                 Work
             </h2>
         <div class="work-items">
-        <div class="flex-row">
-            <article>
+        <div>
+            <article class="work">
                 <p>
                     Run Buddy: html and css project 
                 </p>
-                <img src="images/run-buddy.png" alt="" style="max-width: 100%; height: auto;"  >
+                <img src="images/run-buddy.png" alt="" style="max-width: 75vw; height: auto;"  >
             </article>
         </div>
-        <div class="flex-row">
-            <article>
+        <div>
+            <article class="work">
                 <p>
                     Robot Gladiators: JavaScript project
                 </p>
-                <img src="images/robot-gladiators.jpg" alt="" style="max-width: 75%; height: auto;">
+                <img src="images/robotgladiators.jpg" alt="" style="max-width: 50vw; height: auto;">
             </article>
         </div>
-        <div class="flex-row">
-            <article>
+        <div>
+            <article class="work">
                 <p>
                     Work 3: text here
                 </p>
-                <!--ADD PLACEHOLDER IMAGE HERE <img src="" alt="" width="100%" height="100%"> -->
+                <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
+            </article>
+        </div>
+        <div>
+            <article>
+                <p>
+                    Work 4: text here
+                </p>
+                <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
+            </article>
+        </div>
+        <div>
+            <article class="work">
+                <p>
+                    Work 5: text here
+                </p>
+                <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
+            </article>
+        </div>
+        <div>
+            <article class="work">
+                <p>
+                    Work 6: text here
+                </p>
+                <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
             </article>
         </div>
         </div>
@@ -71,24 +95,34 @@
         <!-- work section ends-->
 
         <!--about me section-->
-        <div>
         <section id="about">
             <h2>
                 About 
             </h2>
-           <div class="about-flex">
+            <div class="about-flex">
+            <article>
             <p class="about-text">
                 Hi! My name is Vanessa, a Mexican-American Front End Web Developer in training. 
-                I graduated with a Public Health degreen in May 2020 and currently in the process of a career change.  
+                </br>
+                I graduated with a Public Health degreen in May 2020 and currently in the process of a career change.
+            </br>
+            </br>
                 My friends and colleages would describe me as empathetic, passionate, and creative. 
-                I want to help users have an intuitive experience with through creative and seamless designs. 
+        </br>
+                I want to help users have an intuitive experience through creative and seamless designs. 
             </p>
-            </div>
+            </article>
             <div class="about-me-img" class="about-flex">
-            <img  src="images/headshot.jpg" alt="headshot of Vanessa Maldonado" style="max-width:100%; height:auto;">
+            <img  src="images/headshot.jpg" alt="headshot of Vanessa Maldonado" style="max-width:25vw; height:auto;">
             </div>
-        </section>
+            <article class="about-text">
+                <p>
+                    Work 6: text here
+                </p>
+                <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
+            </article>
         </div>
+        </section>
         <!-- about me ends-->
 
         <!-- contact section-->
@@ -98,13 +132,17 @@
             </h2>
            <ul class="contact">
                <li class="contact-info">
-                    <i class="fa fa-chain" style="font-size:24px"></i><a href="linked in here" > Linked In</a>
+                    <i class="fa fa-chain" style="font-size:3vw"></i><a href="linked in here" > Linked In</a>
+                    <i class="fa fa-angle-double-right" style="font-size:3vw"></i>
                </li>
                <li class="contact-info">
-                    <i class="fa fa-github-alt" style="font-size:24px"></i><a href="git hub here" > Git Hub</a>
+                    <i class="fa fa-github-alt" style="font-size:3vw"></i><a href="git hub here" > Git Hub</a>
+                    <i class="fa fa-angle-double-right" style="font-size:3vw"></i>
                </li>
                <li class="contact-info"> 
-                    <i class="fa fa-envelope-o" style="font-size:24px"></i><a href="email here" > vanessa.rodriguez@mavs.uta.edu</a>
+                    <i class="fa fa-envelope-o" style="font-size:3vw"></i>
+                    <a href="email here" > vanessa.rodriguez@mavs.uta.edu</a>
+                    <i class="fa fa-angle-double-right" style="font-size:3vw"></i>
                </li>
            </ul>
         </section>
@@ -113,7 +151,7 @@
         <!-- footer section -->
         <footer>
             <p>
-                Made with &hearts;
+                Made with lots of &hearts; and hard work 
             </p>
         </footer>
     </body>
