adding links and contact info

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div>
             <article class="work">
                 <p>
-                    Run Buddy: html and css project 
+                    Run Buddy: HTML and CSS project 
                 </p>
                 <img src="images/run-buddy.png" alt="" style="max-width: 75vw; height: auto;"  >
             </article>
@@ -61,9 +61,9 @@
         <div>
             <article class="work">
                 <p>
-                    Work 3: text here
+                    Horiseon: HTML Refactor
                 </p>
-                <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
+                <img src="images/Horiseon-html-refactor.jpg" alt="" style="max-width: 50vw; height: auto;">
             </article>
         </div>
         <div>
@@ -106,22 +106,20 @@
                 </br>
                 I graduated with a Public Health degreen in May 2020 and currently in the process of a career change.
             </br>
-            </br>
                 My friends and colleages would describe me as empathetic, passionate, and creative. 
         </br>
-                I want to help users have an intuitive experience through creative and seamless designs. 
+                I want to help users have an intuitive experience through artistic and seamless designs. 
             </p>
             </article>
-            <div class="about-me-img" class="about-flex">
-            <img  src="images/headshot.jpg" alt="headshot of Vanessa Maldonado" style="max-width:25vw; height:auto;">
+
+            <div class="about-me-img">
+                <div class="top-img">
+                    <img  src="images/headshot.jpg" alt="headshot of Vanessa Maldonado" style="max-width:50vw; height:auto;">
+                </div>
+                <div class="bottom-img">
+                    <img src="images/IMG_9460.JPG" alt="" style="max-width: 60vw; height: auto;">
+                </div>
             </div>
-            <article class="about-text">
-                <p>
-                    Work 6: text here
-                </p>
-                <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
-            </article>
-        </div>
         </section>
         <!-- about me ends-->
 
@@ -132,17 +130,16 @@
             </h2>
            <ul class="contact">
                <li class="contact-info">
-                    <i class="fa fa-chain" style="font-size:3vw"></i><a href="linked in here" > Linked In</a>
-                    <i class="fa fa-angle-double-right" style="font-size:3vw"></i>
+                    <i class="fa fa-chain" style="font-size:3vw"></i>
+                    Linked In <a href="https://www.linkedin.com/in/vanessa-maldonado-rodriguez-807344191" target="_blank"> <i class="fa fa-angle-double-right" style="font-size:3vw"></i></a>
                </li>
                <li class="contact-info">
-                    <i class="fa fa-github-alt" style="font-size:3vw"></i><a href="git hub here" > Git Hub</a>
-                    <i class="fa fa-angle-double-right" style="font-size:3vw"></i>
+                    <i class="fa fa-github-alt" style="font-size:3vw"></i>
+                    Git Hub <a href="https://github.com/vanessamald" target="_blank"> <i class="fa fa-angle-double-right" style="font-size:3vw"></i></a> 
                </li>
                <li class="contact-info"> 
                     <i class="fa fa-envelope-o" style="font-size:3vw"></i>
-                    <a href="email here" > vanessa.rodriguez@mavs.uta.edu</a>
-                    <i class="fa fa-angle-double-right" style="font-size:3vw"></i>
+                    Email <a href="mailto:vanessa.rodriguez3@mavs.uta.edu target=" target="_blank"> <i class="fa fa-angle-double-right" style="font-size:3vw"></i></a>
                </li>
            </ul>
         </section>
