updating links, borders, and image sizing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- navigation -->
         <header id="home">
             <h1>
-                <a href="#home">Vanessa Maldonado </a>
+                <a href="/">Vanessa Maldonado </a>
             </h1>
             <nav>
                 <ul>
@@ -45,17 +45,9 @@
         <div>
             <article class="work">
                 <p>
-                    Run Buddy: HTML and CSS project 
+                    Run Buddy: HTML and CSS
                 </p>
-                <img src="images/run-buddy.png" alt="" style="max-width: 75vw; height: auto;"  >
-            </article>
-        </div>
-        <div>
-            <article class="work">
-                <p>
-                    Robot Gladiators: JavaScript project
-                </p>
-                <img src="images/robotgladiators.jpg" alt="" style="max-width: 50vw; height: auto;">
+                <a href="https://vanessamald.github.io/run-buddy/" target="_blank"> <img src="images/run-buddy.png" alt="" style="max-width: 80vw; height: auto;"></a>
             </article>
         </div>
         <div>
@@ -63,8 +55,16 @@
                 <p>
                     Horiseon: HTML Refactor
                 </p>
-                <img src="images/Horiseon-html-refactor.jpg" alt="" style="max-width: 50vw; height: auto;">
+                <a href="https://vanessamald.github.io/HTML-refactor/"> <img src="images/Horiseon-html-refactor.jpg" alt="" target="_blank" style="max-width: 50vw; height: auto;"> </a> 
             </article>
+        </div>
+        <div>
+            <article class="work">
+                <p>
+                    Robot Gladiators: JavaScript
+                </p>
+                <a href="LINK HERE"> <img src="images/robotgladiators.jpg" alt="" target="_blank" style="max-width: 30vw; height: auto;"> </a>
+            </article> 
         </div>
         <div>
             <article>
@@ -95,7 +95,7 @@
         <!-- work section ends-->
 
         <!--about me section-->
-        <section id="about">
+        <section id="about" class="about-container">
             <h2>
                 About 
             </h2>
