consolidating css properties

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- navigation -->
         <header id="home">
             <h1>
-                <a href="/">Vanessa Maldonado </a>
+                <a href="#home">Vanessa Maldonado </a>
             </h1>
             <nav>
                 <ul>
@@ -148,7 +148,7 @@
         <!-- footer section -->
         <footer>
             <p>
-                Made with lots of &hearts; and hard work 
+                Made with lots of &hearts;  
             </p>
         </footer>
     </body>
