adding alt tag text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>
                     Run Buddy: HTML and CSS
                 </p>
-                <a href="https://vanessamald.github.io/run-buddy/" target="_blank"> <img src="images/run-buddy.png" alt="" style="max-width: 80vw; height: auto;"></a>
+                <a href="https://vanessamald.github.io/run-buddy/" target="_blank"> <img src="images/run-buddy.png" alt="Run Buddy website landing page" style="max-width: 80vw; height: auto;"></a>
             </article>
         </div>
         <div>
@@ -55,7 +55,7 @@
                 <p>
                     Horiseon: HTML Refactor
                 </p>
-                <a href="https://vanessamald.github.io/HTML-refactor/"> <img src="images/Horiseon-html-refactor.jpg" alt="" target="_blank" style="max-width: 50vw; height: auto;"> </a> 
+                <a href="https://vanessamald.github.io/HTML-refactor/"> <img src="images/Horiseon-html-refactor.jpg" alt="Horiseon website landing page" target="_blank" style="max-width: 50vw; height: auto;"> </a> 
             </article>
         </div>
         <div>
@@ -63,7 +63,7 @@
                 <p>
                     Robot Gladiators: JavaScript
                 </p>
-                <a href="https://vanessamald.github.io/robot-gladiators/"> <img src="images/robotgladiators.jpg" alt="" target="_blank" style="max-width: 30vw; height: auto;"> </a>
+                <a href="https://vanessamald.github.io/robot-gladiators/"> <img src="images/robotgladiators.jpg" alt="Robot Gladiators JavaScript game" target="_blank" style="max-width: 30vw; height: auto;"> </a>
             </article> 
         </div>
         <div>
@@ -104,11 +104,11 @@
             <p class="about-text">
                 Hi! My name is Vanessa, a Mexican-American Front End Web Developer in training. 
                 </br>
-                I graduated with a Public Health degreen in May 2020 and currently in the process of a career change.
+                I graduated with a Public Health degree in May 2020 and am currently in the process of a career change. I am currently attending the University of Texas Full Stack Coding Bootcamp. 
             </br>
                 My friends and colleages would describe me as empathetic, passionate, and creative. 
         </br>
-                I want to help users have an intuitive experience through artistic and seamless designs. 
+                I want to help users have an intuitive experience through artistic and seamless designs.  
             </p>
             </article>
 
