--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Professional Portfolio</title>
+        <title>Vanessa Maldonado Front End Web Developer Professional Portfolio</title>
     </head>
     <body>
         <!-- navigation -->
@@ -27,16 +27,9 @@
                 </ul>
             </nav>
         </header>
-
-        <!-- hero section -->
-        <section class="hero">
-
-
-        </section>
-        <!-- end of hero section-->
+        <!-- navigation end-->
 
         <!-- work section-->
-        
         <section id="work">
             <h2>
                 Work
@@ -69,7 +62,7 @@
         <div>
             <article>
                 <p>
-                    Work 4: text here
+                    Lorem ipsum dolor sit amet.
                 </p>
                 <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
             </article>
@@ -77,7 +70,7 @@
         <div>
             <article class="work">
                 <p>
-                    Work 5: text here
+                    Lorem ipsum dolor sit amet.
                 </p>
                 <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
             </article>
@@ -85,7 +78,7 @@
         <div>
             <article class="work">
                 <p>
-                    Work 6: text here
+                    Lorem ipsum dolor sit amet.
                 </p>
                 <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
             </article>
@@ -103,15 +96,12 @@
             <article>
             <p class="about-text">
                 Hi! My name is Vanessa, a Mexican-American Front End Web Developer in training. 
-                </br>
-                I graduated with a Public Health degree in May 2020 and am currently in the process of a career change. I am currently attending the University of Texas Full Stack Coding Bootcamp. 
-            </br>
+                I graduated with a Public Health degree in May 2020 and am currently in the process of a career change. 
+                I am currently attending the University of Texas Full Stack Coding Bootcamp. 
                 My friends and colleages would describe me as empathetic, passionate, and creative. 
-        </br>
                 I want to help users have an intuitive experience through artistic and seamless designs.  
             </p>
             </article>
-
             <div class="about-me-img">
                 <div class="top-img">
                     <img  src="images/headshot.jpg" alt="headshot of Vanessa Maldonado" style="max-width:50vw; height:auto;">
