adding HODL api challenge to portfolio

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <div>
             <article>
                 <p>
-                    Lorem ipsum dolor sit amet.
+                    Hold on for Dear Life Ape: API Challenge
                 </p>
-                <img src="images/IMG_9460.JPG" alt="" style="max-width: 25vw; height: auto;">
+                <a href="https://drkevinfriday.github.io/Hold-On-for-Dear-Life-Ape/"></a><img src="images/HODLA.png" alt="" style="max-width: 30vw; height: auto;">
             </article>
         </div>
         <div>
